--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -1,3 +1,10 @@
+// Bootstrap Table
+@import "bootstrap-table/dist/bootstrap-table.css";
+@import "bootstrap-table/dist/extensions/filter-control/bootstrap-table-filter-control.css";
+
+@import 'flatpickr/dist/flatpickr.css';
+
+
 // 3rd Party Vendors to include
 $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 
@@ -5,6 +12,3 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import "@fortawesome/fontawesome-free/scss/solid";
 @import "@fortawesome/fontawesome-free/scss/regular";
 @import "@fortawesome/fontawesome-free/scss/brands";
-
-// @import "bootstrap-table/dist/bootstrap-table.css";
-// @import "bootstrap-table/dist/extensions/filter-control/bootstrap-table-filter-control.css";
