--- a/resources/sass/_global.scss
+++ b/resources/sass/_global.scss
@@ -78,7 +78,7 @@ dl.copyable{
     width: 100%;
     height: 100vh;
 
-    background: url(/images/front.jpg);
+    // background: url(/images/front.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
